加入公有部分